--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mohan </title>
+  <title>Mohan</title>
 
   <style>
     :root{
@@ -24,7 +24,6 @@
       background: var(--bg);
     }
 
-    /* simple topo-style background */
     body::before{
       content:"";
       position: fixed;
@@ -45,7 +44,6 @@
       position: relative;
     }
 
-    /* right stacked nav like your wix screenshots */
     .sidenav{
       position: fixed;
       top: 90px;
@@ -87,43 +85,22 @@
       line-height: 1.45;
     }
 
-    .grid{
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: var(--gap);
-      align-items: start;
-    }
-
-    .card{
-      background: #fff;
-      border: 1px solid var(--line);
-    }
-    .card img{
-      display: block;
-      width: 100%;
-      height: 380px;
-      object-fit: cover;
-    }
-
     @media (min-width: 1100px){
       .wrap{ padding-right: 140px; }
     }
 
     @media (max-width: 980px){
-      .grid{ grid-template-columns: repeat(2, 1fr); }
       .sidenav{
         right: 16px;
         top: 16px;
         background: rgba(255,255,255,0.92);
         border: 1px solid var(--line);
-        padding: 12px 12px;
+        padding: 12px;
       }
       .sidenav a{ font-size: 16px; }
     }
 
     @media (max-width: 620px){
-      .grid{ grid-template-columns: 1fr; }
-      .card img{ height: 340px; }
       header{ flex-direction: column; align-items: flex-start; }
     }
   </style>
@@ -133,9 +110,6 @@
   <nav class="sidenav" aria-label="Site">
     <a class="active" href="index.html">HOME</a>
     <a href="art.html">ART</a>
-    <a href="design.html">DESIGN</a>
-    <a href="structures.html">STRUCTURES</a>
-    <a href="work.html">WORK</a>
   </nav>
 
   <div class="wrap">
@@ -146,18 +120,6 @@
     <p class="tagline">
       PhD student
     </p>
-
-    <div class="grid">
-      <div class="card"><img src="1.png" alt="Artwork 1"></div>
-      <div class="card"><img src="2.png" alt="Artwork 2"></div>
-      <div class="card"><img src="3.png" alt="Artwork 3"></div>
-      <div class="card"><img src="4.png" alt="Artwork 4"></div>
-      <div class="card"><img src="5.png" alt="Artwork 5"></div>
-      <div class="card"><img src="6.jpg" alt="Artwork 6"></div>
-      <div class="card"><img src="7.jpg" alt="Artwork 7"></div>
-      <div class="card"><img src="8.jpg" alt="Artwork 8"></div>
-      <div class="card"><img src="9.jpg" alt="Artwork 9"></div>
-    </div>
   </div>
 </body>
 </html>
