Update image paths to use 'assets' directory

--- a/art.html
+++ b/art.html
@@ -143,15 +143,15 @@
     </p>
 
     <div class="grid">
-      <div class="card"><img src="1.png" alt="Artwork 1" loading="lazy"></div>
-      <div class="card"><img src="2.png" alt="Artwork 2" loading="lazy"></div>
-      <div class="card"><img src="3.png" alt="Artwork 3" loading="lazy"></div>
-      <div class="card"><img src="4.png" alt="Artwork 4" loading="lazy"></div>
-      <div class="card"><img src="5.png" alt="Artwork 5" loading="lazy"></div>
-      <div class="card"><img src="6.jpg" alt="Artwork 6" loading="lazy"></div>
-      <div class="card"><img src="7.jpg" alt="Artwork 7" loading="lazy"></div>
-      <div class="card"><img src="8.jpg" alt="Artwork 8" loading="lazy"></div>
-      <div class="card"><img src="9.jpg" alt="Artwork 9" loading="lazy"></div>
+      <div class="card"><img src="assets/1.png" alt="Artwork 1" loading="lazy"></div>
+      <div class="card"><img src="assets/2.png" alt="Artwork 2" loading="lazy"></div>
+      <div class="card"><img src="assets/3.png" alt="Artwork 3" loading="lazy"></div>
+      <div class="card"><img src="assets/4.png" alt="Artwork 4" loading="lazy"></div>
+      <div class="card"><img src="assets/5.png" alt="Artwork 5" loading="lazy"></div>
+      <div class="card"><img src="assets/6.jpg" alt="Artwork 6" loading="lazy"></div>
+      <div class="card"><img src="assets/7.jpg" alt="Artwork 7" loading="lazy"></div>
+      <div class="card"><img src="assets/8.jpg" alt="Artwork 8" loading="lazy"></div>
+      <div class="card"><img src="assets/9.jpg" alt="Artwork 9" loading="lazy"></div>
     </div>
   </div>
 </body>
